# defectdojo-uploader

./: .gitignore  README.md  pyproject.toml
ddcli/: __init__.py  api.py  cli.py
defectdojo_uploader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
